This file describes changes in recent versions of Slurm. It primarily
documents those changes that are of interest to users and administrators.

* Changes in Slurm 23.11.10
===========================
 -- switch/hpe_slingshot - Fix issue that could result in a 0 length state file.

* Changes in Slurm 23.11.9
==========================
 -- Fix many commands possibly reporting an "Unexpected Message Received" when
    in reality the connection timed out.
 -- Fix heterogeneous job components not being signaled with scancel --ctld and
    'DELETE slurm/v0.0.40/jobs' if the job ids are not explicitly given,
    the heterogeneous job components match the given filters, and the
    heterogeneous job leader does not match the given filters.
 -- Fix regression from 23.02 impeding job licenses from being cleared.
 -- Move error to log_flag which made _get_joules_task error to be logged to the
    user when too many rpcs were queued in slurmd for gathering energy.
 -- slurmrestd - Prevent a slurmrestd segfault when modifying an association
    without specifying max TRES limits in the request if those TRES
    limits are currently defined in the association. This affects the following
    fields of endpoint 'POST /slurmdb/v0.0.38/associations/':
      'associations/max/tres/per/job'
      'associations/max/tres/per/node'
      'associations/max/tres/total'
      'associations/max/tres/minutes/per/job'
      'associations/max/tres/minutes/total'
 -- Fix power_save operation after recovering from a failed reconfigure.
 -- scrun - Delay shutdown until after start requested. This caused scrun
    to never start or shutdown and hung forever when using --tty.
 -- Fix backup slurmctld potentially not running the agent when taking over as
    the primary controller.
 -- Fix primary controller not running the agent when a reconfigure of the
    slurmctld fails.
 -- jobcomp/{elasticsearch,kafka} - Avoid sending fields with invalid date/time.